--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.6",
     "expect": "^1.20.2",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.15.0",
     "mongodb": "^3.1.13",
     "mongoose": "^4.5.9",
-    "supertest": "^2.0.0"
+    "supertest": "^2.0.0",
+    "validator": "^5.6.0"
   }
 }
